display whitespace correctly

--- a/editor/src/main/resources/gui/editorField.css
+++ b/editor/src/main/resources/gui/editorField.css
@@ -2,6 +2,7 @@
 * {
     font-style: normal;
     font-family: monospace;
+    white-space: pre-wrap;
 }
 
 /* line numbering */
